# sagarmatha-settings-daemon

./: ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  main.c
data/: Makefile.am  org.sagarmatha.settings-daemon.peripherals.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.background.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.color.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.housekeeping.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.keyboard.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.media-keys.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.orientation.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.power.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.print-notifications.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.xrandr.gschema.xml.in.in  org.sagarmatha.settings-daemon.plugins.xsettings.gschema.xml.in.in  sagarmatha-settings-daemon-uninstalled.pc.in  sagarmatha-settings-daemon.1  sagarmatha-settings-daemon.desktop.in.in  sagarmatha-settings-daemon.pc.in
debian/: changelog  control  control.in  copyright  rules  sagarmatha-settings-daemon.1  sagarmatha-settings-daemon.install  sagarmatha-settings-daemon.links  sagarmatha-settings-daemon.manpages  sagarmatha-settings-daemon.user-session.desktop  sagarmatha-settings-daemon.user-session.upstart  sagarmatha-update-wallpaper-cache.c  source_sagarmatha-settings-daemon.py
debian/patches/: 05_disable_corner_tapping.patch  16_use_synchronous_notifications.patch  43_disable_locale_settings.patch  45_suppress-printer-may-not-be-connected-notification.patch  47_delay_pa_connect_to_idle.patch  48_register_client_before_idle_callbacks.patch  51_lock_screen_on_suspend.patch  52_sync_background_to_accountsservice.patch  60_unity_hide_status_icon.patch  61_revert_libgnomekbd_drop  61_unity_use_application_indicator.patch  62_unity_disable_csd_printer.patch  63_unity_start_mounter.patch  64_restore_terminal_keyboard_shortcut_schema.patch  90_set_gmenus_xsettings.patch  bugzilla_segfault_dpms.patch  correct_logout_action.patch  disable_three_touch_tap.patch  migrate_metacity_keys.patch  nexus-orientation.patch  power-check-null-devices.patch  power-no-fallback-notifications.patch  revert_new_ibus_use.patch  sync_keyboard_layout_to_accountsservice.patch  touchscreen_rotation.patch
man/: Makefile.am  sagarmatha-settings-daemon.xml
plugins/a11y-keyboard/: Makefile.am  a11y-keyboard.sagarmatha-settings-plugin.in  csd-a11y-keyboard-manager.c  csd-a11y-keyboard-plugin.c  csd-a11y-keyboard-plugin.h  csd-a11y-preferences-dialog.c  test-a11y-preferences-dialog.c
plugins/a11y-settings/: Makefile.am  a11y-settings.sagarmatha-settings-plugin.in  csd-a11y-settings-manager.c  csd-a11y-settings-plugin.c  csd-a11y-settings-plugin.h
plugins/automount/: Makefile.am  csd-automount-manager.c  csd-autorun.c  sagarmatha-fallback-mount-helper.c  sagarmatha-fallback-mount-helper.desktop.in.in
plugins/background/: Makefile.am  background.sagarmatha-settings-plugin.in  csd-background-manager.c  csd-background-plugin.c  csd-background-plugin.h
plugins/clipboard/: Makefile.am  clipboard.sagarmatha-settings-plugin.in  csd-clipboard-manager.c  csd-clipboard-plugin.c  csd-clipboard-plugin.h
plugins/color/: Makefile.am  color.sagarmatha-settings-plugin.in  csd-color-manager.c  csd-color-plugin.c  csd-color-plugin.h  gcm-edid.c
plugins/common/: Makefile.am  csd-input-helper.c  input-device-example.sh  test-plugin.h
plugins/cursor/: Makefile.am  csd-cursor-manager.c  csd-cursor-plugin.c  csd-cursor-plugin.h  cursor.sagarmatha-settings-plugin.in
plugins/datetime/: Makefile.am  csd-datetime-mechanism-main.c  csd-datetime-mechanism.c  csd-datetime-mechanism.xml  org.sagarmatha.SettingsDaemon.DateTimeMechanism.conf  org.sagarmatha.SettingsDaemon.DateTimeMechanism.service.in  org.sagarmatha.settingsdaemon.datetimemechanism.policy.in
plugins/dummy/: Makefile.am  csd-dummy-manager.c  csd-dummy-plugin.c  csd-dummy-plugin.h  dummy.sagarmatha-settings-plugin.in
plugins/housekeeping/: Makefile.am  csd-disk-space.c  csd-housekeeping-manager.c  csd-housekeeping-plugin.c  csd-housekeeping-plugin.h  csd-ldsm-dialog.c  housekeeping.sagarmatha-settings-plugin.in
plugins/keyboard/: Makefile.am  csd-input-sources-switcher.c  csd-keyboard-manager.c  csd-keyboard-plugin.c  csd-keyboard-plugin.h  csd-keyboard-xkb.c  csd-keyboard-xkb.h  keyboard.sagarmatha-settings-plugin.in
plugins/media-keys/: Makefile.am  README.media-keys-API  csd-media-keys-manager.c  csd-media-keys-plugin.c  csd-media-keys-plugin.h  csd-osd-window-private.h  csd-osd-window.c  csd-osd-window.h  media-keys.sagarmatha-settings-plugin.in  shortcuts-list.h  test-media-window.c
plugins/mouse/: Makefile.am  csd-mouse-manager.c  csd-mouse-plugin.c  csd-mouse-plugin.h  mouse.sagarmatha-settings-plugin.in
plugins/orientation/: Makefile.am  csd-orientation-manager.c  csd-orientation-plugin.c  csd-orientation-plugin.h  orientation.sagarmatha-settings-plugin.in
plugins/power/: Makefile.am  csd-backlight-helper.c  csd-power-manager.c  csd-power-plugin.c  (+5 more)
plugins/sound/: Makefile.am  csd-sound-manager.c  csd-sound-plugin.c  csd-sound-plugin.h  sound.sagarmatha-settings-plugin.in
po/: ChangeLog  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  (+55 more)
sagarmatha-settings-daemon/: Makefile.am  main.c  sagarmatha-settings-manager.c  sagarmatha-settings-manager.h  sagarmatha-settings-module.c  sagarmatha-settings-module.h  sagarmatha-settings-plugin-info.c  sagarmatha-settings-plugin-info.h  sagarmatha-settings-plugin.c  sagarmatha-settings-plugin.h  sagarmatha-settings-profile.c  sagarmatha-settings-profile.h  sagarmatha-settings-session.c  sagarmatha-settings-session.h
(+29 files in other folders)
